# django-custom-shop

./: LICENSE  MANIFEST.in  setup.cfg
custom_shop/: apps.py  signals.py  views.py
custom_shop/address/: __init__.py  admin.py  apps.py  models.py
custom_shop/address/migrations/: 0007_auto_20230716_0247.py
custom_shop/basket/: __init__.py  apps.py  views.py
custom_shop/basket/migrations/: 0012_auto_20230527_2114.py
custom_shop/catalogue/: __init__.py  apps.py  models.py  search_handlers.py  views.py
custom_shop/catalogue/migrations/: 0027_auto_20230527_2114.py  0028_product_is_active.py  0029_alter_product_upc.py  0030_product_short_description.py  0031_alter_product_short_description.py  0032_auto_20230611_1731.py  0033_shoporder.py  0034_shoporder_cutoff_hour.py  0035_auto_20230611_2159.py  0036_alter_category_status.py  0037_category_start_hour.py
custom_shop/checkout/: __init__.py  apps.py  forms.py  views.py
custom_shop/customer/: __init__.py  apps.py  forms.py  views.py
custom_shop/customer/migrations/: 0008_alter_productalert_id.py
custom_shop/dashboard/: __init__.py  apps.py  forms.py  utils.py  views.py
custom_shop/dashboard/catalogue/: __init__.py  apps.py  forms.py  views.py
custom_shop/dashboard/orders/: __init__.py  apps.py
custom_shop/dashboard/partners/: __init__.py  apps.py
custom_shop/order/: __init__.py  apps.py  models.py  utils.py  views.py
custom_shop/shipping/: __init__.py  apps.py  methods.py  repository.py
custom_shop/templatetags/: device_check_tags.py  menu_tags.py  shop_filters.py
(+69 files in other folders)
