[metadata]
name = custom_shop
version = 1.0
description = A Django app to enhance django-oscar.
long_description = file: README.rst
url = https://linkedin.com/in/yksmbkkr/
author = Yash Kulshreshtha
author_email = contact@yashkulshreshtha.me
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate
    django-oscar @ git+https://github.com/yksmbkkr/custom-oscar-shop.git